# photo-sync

./: .gitignore  cli.py  pyproject.toml  server.py
app/: main.py
app/routes/: upload.py
app/services/: google_photos.py
templates/: index.html
