[project]
name = "photo-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
    "ruff>=0.11.12",
]
